# App_ClinicalDBSAnnot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  poc-toga.yml  release.yml
docs/: api.rst  conf.py  contributing.rst  faq.rst  index.rst  installation.rst  output_format.rst  releasing.rst
docs/_templates/autosummary/: class.rst  module.rst
docs/developer/: mobile_build.md  phase4_cleanup.md
newsfragments/: 52.docs.md  62.changed.md  66.changed.md  76.fixed.md  README.md  template.md.jinja
poc/: GO_NO_GO.md  README.md  pyproject.toml
poc/scripts/: verify_no_pyside6.py
poc/src/poc_dbs_annotator/: __init__.py  __main__.py  app.py  canvas_electrode.py  canvas_scale.py  electrode_models.py  exporter.py  form_step.py  updater.py
scripts/: build_macos.py  build_quick.py  build_windows.py  build_windows_nuitka.py  install.ps1  validate_newsfragments.py
src/clinical_dbs_annotator/: __main__.py  config.py  logging_config.py  version.py
src/clinical_dbs_annotator/controllers/: wizard_controller.py
src/clinical_dbs_annotator/models/: electrode_viewer.py  session_data.py
src/clinical_dbs_annotator/ui/: amplitude_split_widget.py  clinical_scales_settings_dialog.py  file_loader.py  session_scales_settings_dialog.py  widgets.py
src/clinical_dbs_annotator/utils/: longitudinal_exporter.py  program_config_manager.py  report_chart_utils.py  responsive.py  session_exporter.py  theme_manager.py
src/clinical_dbs_annotator/views/: annotations_simple_view.py  base_view.py  export_dialog.py  longitudinal_file_view.py  longitudinal_report_view.py  longitudinal_scale_dialog.py  step0_view.py  step1_view.py  step2_view.py  step3_view.py  wizard_window.py
src/dbs_annotator/: __init__.py  __main__.py  config.py  config_electrode_models.py  logging_config.py
src/dbs_annotator/controllers/: wizard_controller.py
src/dbs_annotator/gui/: __init__.py  clock.py  interfaces.py
src/dbs_annotator/gui/qt/: __init__.py  background.py  bootstrap.py  clock.py  paths.py  settings.py
src/dbs_annotator/gui/toga_backend/: __init__.py  app.py  background.py  bootstrap.py  contacts.py  dialogs.py  mobile_export.py  paths.py  resources.py  responsive.py  settings.py  share.py  theme.py  wizard_flow.py
src/dbs_annotator/gui/toga_backend/views/: __init__.py  annotation_only_view.py  step0_view.py  step1_view.py  step2_view.py  step3_view.py  wizard_window.py
src/dbs_annotator/gui/toga_backend/widgets/: __init__.py  electrode_canvas.py  file_chooser.py  group_box.py  increment.py  scale_progress.py  scales_editor.py  stim_params.py
src/dbs_annotator/models/: clinical_scale.py  electrode_viewer.py  session_data.py  stimulation.py
src/dbs_annotator/ui/: amplitude_split_widget.py  widgets.py
src/dbs_annotator/utils/: longitudinal_exporter.py  program_config_manager.py  resources.py  scale_preset_manager.py  session_exporter.py  updater.py  user_data.py
src/dbs_annotator/views/: base_view.py  longitudinal_report_view.py  step1_view.py  step2_view.py  step3_view.py  wizard_window.py
styles/: dark_theme.qss  light_theme.qss
tests/: conftest.py
tests/integration/: test_export_integration.py  test_full_workflow.py
tests/performance/: test_export_performance.py
tests/toga/: conftest.py  test_backend_bootstrap.py  test_electrode_canvas_toga.py  test_scale_progress_toga.py  test_wizard_flow_toga.py
tests/unit/: test_bids_naming.py  test_models.py  test_resources.py  test_session_data.py  test_session_exporter.py  test_session_exporter_open_and_footer.py  test_updater.py  test_utils.py  test_views_basic.py  test_wizard_controller.py
